--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet" />
   
-    <link rel="stylesheet" href="../src/css/reset.css">
-    <link rel="stylesheet" href="../src/css/estilos.css">
-    <link rel="stylesheet" href="../src/css/scrollbar.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/scrollbar.css">
   </head>
   
   <body>
     <header>
       <a href="#">
-        <img src="../src/imagens/pokeball.png" alt="pokebola" class="logo" />
+        <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo" />
       </a>
       <button id="botao-alterar-tema">
         <img src="../src/imagens/sun.png" alt="imagem do sol" class="imagem-botao" />
@@ -33,7 +33,7 @@
             <span>#001</span>
           </div>
   
-          <img src="../src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" />
+          <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" />
   
           <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -50,7 +50,7 @@
             <span>#002</span>
           </div>
   
-          <img src="../src/imagens/ivysaur.gif" alt="Ivysaur" class="gif" />
+          <img src="./src/imagens/ivysaur.gif" alt="Ivysaur" class="gif" />
   
           <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -67,7 +67,7 @@
             <span>#003</span>
           </div>
   
-          <img src="../src/imagens/venusaur.gif" alt="Venusaur" class="gif" />
+          <img src="./src/imagens/venusaur.gif" alt="Venusaur" class="gif" />
   
           <ul class="tipos">
             <li class="tipo grama">Grama</li>
@@ -84,7 +84,7 @@
             <span>#004</span>
           </div>
   
-          <img src="../src/imagens/charmander.gif" alt="Charmander" class="gif" />
+          <img src="./src/imagens/charmander.gif" alt="Charmander" class="gif" />
   
           <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -100,7 +100,7 @@
             <span>#005</span>
           </div>
   
-          <img src="../src/imagens/charmeleon.gif" alt="Charmeleon" class="gif" />
+          <img src="./src/imagens/charmeleon.gif" alt="Charmeleon" class="gif" />
   
           <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -116,7 +116,7 @@
             <span>#006</span>
           </div>
   
-          <img src="../src/imagens/charizard.gif" alt="Charizard" class="gif" />
+          <img src="./src/imagens/charizard.gif" alt="Charizard" class="gif" />
   
           <ul class="tipos">
             <li class="tipo fogo">Fogo</li>
@@ -133,7 +133,7 @@
             <span>#007</span>
           </div>
   
-          <img src="../src/imagens/squirtle.gif" alt="Squirtle" class="gif" />
+          <img src="./src/imagens/squirtle.gif" alt="Squirtle" class="gif" />
   
           <ul class="tipos">
             <li class="tipo agua">Água</li>
@@ -149,7 +149,7 @@
             <span>#008</span>
           </div>
   
-          <img src="../src/imagens/wartortle.gif" alt="Wartortle" class="gif" />
+          <img src="./src/imagens/wartortle.gif" alt="Wartortle" class="gif" />
   
           <ul class="tipos">
             <li class="tipo agua">Água</li>
@@ -165,7 +165,7 @@
             <span>#009</span>
           </div>
   
-          <img src="../src/imagens/blastoise.gif" alt="Blastoise" class="gif" />
+          <img src="./src/imagens/blastoise.gif" alt="Blastoise" class="gif" />
   
           <ul class="tipos">
             <li class="tipo agua">Água</li>
@@ -181,7 +181,7 @@
             <span>#010</span>
           </div>
   
-          <img src="../src/imagens/caterpie.gif" alt="Caterpie" class="gif" />
+          <img src="./src/imagens/caterpie.gif" alt="Caterpie" class="gif" />
   
           <ul class="tipos">
             <li class="tipo inseto">Inseto</li>
